--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,6 +52,7 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: true
           VALIDATE_MARKDOWN: false
+          VALIDATE_NATURAL_LANGUAGE: false
           VALIDATE_YAML: false
           DEFAULT_BRANCH: master
           VALIDATE_DOCKERFILE: false
