--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
