--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,7 +23,8 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
