--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "randexp": "^0.5.3"
   },
   "devDependencies": {
     "eslint": "^8.13.0",
