--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.5",
