--- a/Backend/.env_example
+++ b/Backend/.env_example
@@ -1,8 +1,6 @@
-PORT=
+PORT=3000
 MONGO_URL=
 SECRET_JWT=
-JWT_EXPIRES_IN=
-HOST=
-SERVICE=
-USER=
-PASS=
+JWT_EXPIRES_IN=7d
+GMAIL_ID=
+GMAIL_PASSWORD=
