--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000  --recursive ./tests/*.test.js --exit",
     "start": "node src/index.js",
     "lint": "standard --fix"
   },
@@ -29,7 +29,9 @@
     "randexp": "^0.5.3"
   },
   "devDependencies": {
-    "eslint": "^8.13.0",
-    "standard": "^16.0.4"
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "standard": "^16.0.4",
+    "mocha": "^10.0.0"
   }
 }
