--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "author": "BearTS <bear@tamako.tech>",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.1173.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
@@ -25,13 +26,14 @@
     "moment": "^2.29.3",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "randexp": "^0.5.3"
   },
   "devDependencies": {
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
-    "standard": "^16.0.4",
-    "mocha": "^10.0.0"
+    "mocha": "^10.0.0",
+    "standard": "^16.0.4"
   }
 }
