Added UI Components and integrated Login

--- a/Android_App_Code/app/src/main/AndroidManifest.xml
+++ b/Android_App_Code/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.studybuddy">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +14,19 @@
         android:theme="@style/Theme.StudyBuddy"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".Dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".activities.SignUp"
+            android:exported="false" />
+        <activity
+            android:name=".activities.LogIn"
+            android:exported="false" />
+        <activity
+            android:name=".activities.WelcomeScreen"
+            android:exported="false" />
+        <activity
+            android:name=".activities.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
