--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,8 +14,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.6",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "framer-motion": "^6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
