--- a/Android_App_Code/app/build.gradle
+++ b/Android_App_Code/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
     implementation 'com.airbnb.android:lottie:4.2.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
