--- a/Android_App_Code/app/src/main/AndroidManifest.xml
+++ b/Android_App_Code/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.GroupDetails"
+            android:exported="false" />
+        <activity
             android:name=".activities.CreateGroup"
             android:exported="false" />
         <activity
