--- a/Android_App_Code/app/build.gradle
+++ b/Android_App_Code/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
