[Feature]: Create group

--- a/Android_App_Code/app/src/main/AndroidManifest.xml
+++ b/Android_App_Code/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AddModules"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MakeGroup"
+            android:exported="false" />
+        <activity
             android:name=".activities.ApproveRequest"
             android:exported="false" />
         <activity
