--- a/Android_App_Code/app/src/main/AndroidManifest.xml
+++ b/Android_App_Code/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,6 +18,12 @@
         android:theme="@style/Theme.StudyBuddy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.Placeholder"
+            android:exported="false" />
+        <activity
+            android:name=".activities.InviteSucceess"
+            android:exported="false" />
         <activity
             android:name=".activities.AddModules"
             android:exported="false" />
@@ -65,10 +72,11 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="false" />
-        <activity android:name=".activities.Capture"
+        <activity
+            android:name=".activities.Capture"
             android:screenOrientation="fullSensor"
             android:stateNotNeeded="true"
-            android:theme="@style/zxing_CaptureTheme"/>
+            android:theme="@style/zxing_CaptureTheme" />
     </application>
 
 </manifest>
