--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,30 +12,46 @@
   "author": "BearTS <bear@tamako.tech>",
   "license": "MIT",
   "dependencies": {
-    "aws-sdk": "^2.1173.0",
-    "axios": "^0.26.1",
+    "aws-sdk": "^2.1228.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
-    "chalk": "^4.1.2",
-    "cookie-parser": "^1.4.6",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.3",
     "errorhandler": "^1.5.1",
-    "express": "^4.17.3",
-    "helmet": "^5.0.2",
-    "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.3",
-    "mongoose": "^6.3.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.5",
-    "randexp": "^0.5.3"
+    "express": "^4.18.1",
+    "helmet": "^6.0.0",
+    "hpp": "^0.2.3",
+    "joi": "^17.6.2",
+    "mongoose": "^6.6.4",
+    "multer": "1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/errorhandler": "^1.5.0",
+    "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
+    "@types/hpp": "^0.2.2",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.6",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": ">=5.31.0",
+    "@typescript-eslint/parser": ">=5.31.0",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
+    "eslint": ">=8.0.0",
     "mocha": "^10.0.0",
-    "standard": "^16.0.4"
+    "prettier": "2.7.1",
+    "standard": "^16.0.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": ">=4.4"
   }
 }
